--- a/fcss/css/fcss.css
+++ b/fcss/css/fcss.css
@@ -65,3 +65,17 @@ h1.title{
 .pink:active{
 	background: #762351;
 }
+
+input[type="text"]{
+	border-radius: 3px;
+	border: 3px solid #fff;
+	-webkit-transition: 0.2s linear;
+	transition: 0.2s linear;
+	padding: 4px 6px;
+	height: 20px;
+	display: inline-block;
+}
+
+input[type="text"]:focus{
+	border-color: #2980b9;
+}
