--- a/fcss/css/fcss.css
+++ b/fcss/css/fcss.css
@@ -75,7 +75,7 @@ h1.title{
 
 input[type="text"]{
 	border-radius: 3px;
-	border: 3px solid #fff;
+	border: 3px solid #DBDBDB;
 	-webkit-transition: 0.2s linear;
 	transition: 0.2s linear;
 	padding: 4px 6px;
